--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for AdvancedRaiders
 
+1.4.2 - Zhivaya water should now be visible in the drug policy list
+
+
 1.4.1 - Updated to 1.4, opened the strings for translation.
 Used DeepL to update translations for ChineseSimplified, French, German, Russian
 
